--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       const handleSubmit = async () => {
         try {
-          const res = await fetch('http://localhost:8000/api/ayurveda', {
+          const res = await fetch('https://ai-ayurveda-backend-1.onrender.com', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ prompt }),
